# imou_life

./: .coderabbit.yaml  .cookiecutter.json  .coveragerc  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .pr_agent.toml  .pre-commit-ci.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .scrutinizer.yml  BATTERY_CODE_REVIEW.md  BATTERY_IMPROVEMENTS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTEXT.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_ISSUES_REPORT.md  DEVELOPMENT.md  Dockerfile.test  INTEGRATION_TESTS_SUMMARY.md  LICENSE  PRE_COMMIT_OPTIMIZATION.md  README.md  REQUIREMENTS.md  TEST_RESULTS_INTEGRATION.md  analyze_coverage.py  commit_message.txt  conftest.py  coverage.lcov  docker-compose.test.yml  git-bump.ps1  gold_tier_verification.md  hacs.json  info.md  pyproject.toml  quality_scale_verification.md  (+9 more)
.claude/: KARPATHY_SETUP.md
.claude/skills/: README.md
.devcontainer/: devcontainer.json
.github/: MERGIFY_QUICK_START.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-release.yml  constraints.txt  ha-compatibility.yml  release.yaml  release.yml  releases.yml  semantic-release.yml  test.yaml  test.yml  validate.yml
.hacs/: config.json
assets/images/: README.md
config/: .coveragerc  docs_conf.py  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup_dev.py
custom_components/imou_life/: BRANDING.md  __init__.py  battery_binary_sensor.py  battery_button.py  battery_coordinator.py  battery_entity.py  battery_select.py  battery_types.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  entity_mixins.py  helpers.py  icons.json  manifest.json  platform_setup.py  quality_scale.yaml  rate_limit_manager.py  select.py  sensor.py  services.yaml  siren.py  strings.json  switch.py
custom_components/imou_life/translations/: ca.json  en.json  es-ES.json  fr.json  he.json  id.json  it-IT.json  pt-BR.json
docs/: BATTERY_NOTES_INTEGRATION.md  BATTERY_OPTIMIZATION.md  CHANGELOG.md  COMPATIBILITY.md  CONFIGURATION.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  DEVELOPMENT.md  FAQ.md  GIT_BUMP.md  HACS_CACHE_FIX.md  HACS_ENHANCEMENTS.md  HACS_INSTALLATION_FIX.md  INSTALLATION.md  MERGIFY.md  MULTI_DEVICE_GUIDE.md  ORPHANED_DEVICE_CLEANUP.md  PERFORMANCE_TROUBLESHOOTING.md  PRECOMMIT_CI_SETUP.md  QUALITY_SCALE.md  QUICK_START.md  README.md  RELEASE_PROCESS.md  REQUIREMENTS.md  SERVICES.md  STALE_DEVICE_DETECTION.md  TESTING.md  UNINSTALL.md  VERSION_COMPATIBILITY.md  conf.py  index.md  index.rst  info.md
docs/development/: BRONZE_TIER_COMPLETION.md  COVERAGE_ANALYSIS.md  CRITICAL_FIXES_APPLIED.md  HOOK_ANALYSIS.md  QUALITY_SCALE_ANALYSIS.md  QUALITY_SCALE_ROADMAP.md  REPO_ANALYSIS.md
docs/testing/: TEST_RESULTS_INTEGRATION.md
tests/: conftest.py  mocks.py  test_config_flow.py  test_init.py  test_precommit_ci.py  test_switch.py
tests/fixtures/: const.py  mocks.py
tests/integration/: KNOWN_ISSUES.md  README.md  __init__.py  conftest.py  test_battery_optimization_e2e.py  test_entity_interactions.py  test_full_setup_flow.py  test_multi_device_discovery.py
tests/unit/: conftest.py  test_api_status_sensor.py  test_battery_binary_sensor.py  test_battery_button.py  test_battery_coordinator.py  test_battery_coordinator_data.py  test_battery_coordinator_init.py  test_battery_coordinator_methods.py  test_battery_coordinator_optimization.py  test_battery_coordinator_settings.py  test_battery_coordinator_sleep.py  test_battery_platform_setup.py  test_battery_select.py  test_battery_types.py  test_binary_sensor.py  test_bronze_tier_compliance.py  test_button.py  test_camera.py  test_camera_comprehensive.py  test_config_flow.py  test_config_flow_comprehensive.py  test_config_flow_discovery.py  test_config_flow_reauth.py  test_const.py  test_coordinator.py  test_coordinator_rate_limit.py  test_device_removal.py  test_diagnostics.py  test_discovery_coordinator.py  test_entity.py  test_entity_mixins.py  test_helpers.py  test_init.py  test_init_comprehensive.py  test_init_error_handling.py  test_minimal.py  test_orphan_cleanup.py  test_platform_setup.py  test_rate_limit_handling.py  test_rate_limit_manager.py  (+8 more)
tools/docker/: .dockerignore  docker-compose.test.yml
tools/scripts/: git-bump.ps1  project-info.ps1  run_docker_tests.ps1  run_tests.bat  sync_version.py  update_version_badges.bat  update_version_badges.ps1
tools/validation/: run_docker_tests.py  run_simple_tests.py  test_setup_performance.py  validate_component.py  validate_imou_setup.py
