[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imou_life"
version = "1.6.0"
description = "Home Assistant integration for Imou Life cameras and devices"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Maxim United", email = "maxim@maximunited.com"}
]
keywords = ["home-assistant", "imou", "camera", "integration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
requires-python = ">=3.11"
dependencies = [
    "imouapi>=1.0.15",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "python-semantic-release>=9.0.0",
]
docs = [
    "sphinx>=8.0.0,<10.0.0",
    "myst-parser>=5.0.0,<6.0.0",
    "sphinx-rtd-theme>=3.1.0,<4.0.0",
]

[tool.setuptools]
packages = ["custom_components.imou_life"]
exclude-package-data = {"*" = ["config/*", "docs/*", "tests/*", "tools/*", "venv/*", ".git/*"]}

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
    "-v"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["custom_components/imou_life"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/dist/*",
    "*/build/*",
    "*/.git/*",
    "*/node_modules/*",
    "*/coverage/*",
    "*/htmlcov/*",
    "*/.pytest_cache/*",
    "*/.tox/*",
    "*/.mypy_cache/*",
    "*/.coverage*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@\\(abc\\.\\)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Imou Life Integration Coverage Report"

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration moved to .pre-commit-config.yaml to avoid conflicts

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): bump version to {version}"
major_on_zero = false
branch = "master"
build_command = "python tools/scripts/sync_version.py"

[tool.semantic_release.changelog]
changelog_file = ""

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = false
